--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -884,10 +884,6 @@ video {
   position: relative;
 }
 
-.sticky{
-  position: sticky;
-}
-
 .inset-0{
   inset: 0px;
 }
@@ -957,14 +953,6 @@ video {
   top: 1rem;
 }
 
-.-right-1{
-  right: -0.25rem;
-}
-
-.-top-1{
-  top: -0.25rem;
-}
-
 .z-10{
   z-index: 10;
 }
@@ -980,6 +968,11 @@ video {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .-ml-\[41px\]{
@@ -1130,10 +1123,6 @@ video {
   display: grid;
 }
 
-.hidden{
-  display: none;
-}
-
 .h-1{
   height: 0.25rem;
 }
@@ -1205,14 +1194,6 @@ video {
 
 .h-px{
   height: 1px;
-}
-
-.h-2{
-  height: 0.5rem;
-}
-
-.h-28{
-  height: 7rem;
 }
 
 .min-h-screen{
@@ -1303,18 +1284,6 @@ video {
   width: 100%;
 }
 
-.w-28{
-  width: 7rem;
-}
-
-.w-64{
-  width: 16rem;
-}
-
-.w-\[8\%\]{
-  width: 8%;
-}
-
 .max-w-2xl{
   max-width: 42rem;
 }
@@ -1385,16 +1354,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.cursor-pointer{
-  cursor: pointer;
-}
-
 .resize-none{
   resize: none;
-}
-
-.resize-y{
-  resize: vertical;
 }
 
 .grid-cols-1{
@@ -1495,16 +1456,6 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.overflow-auto{
-  overflow: auto;
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1547,10 +1498,6 @@ video {
 
 .border-2{
   border-width: 2px;
-}
-
-.border-4{
-  border-width: 4px;
 }
 
 .border-b{
@@ -1597,10 +1544,6 @@ video {
 
 .border-transparent{
   border-color: transparent;
-}
-
-.border-white\/10{
-  border-color: rgb(255 255 255 / 0.1);
 }
 
 .bg-\[\#0A66C2\]{
@@ -1677,18 +1620,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-transparent{
-  background-color: transparent;
-}
-
-.bg-white\/10{
-  background-color: rgb(255 255 255 / 0.1);
-}
-
-.bg-white\/80{
-  background-color: rgb(255 255 255 / 0.8);
-}
-
 .bg-opacity-10{
   --tw-bg-opacity: 0.1;
 }
@@ -1699,10 +1630,6 @@ video {
 
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-b{
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .from-\[\#0A66C2\]{
@@ -1753,11 +1680,6 @@ video {
 
 .to-purple-200{
   --tw-gradient-to: #e9d5ff var(--tw-gradient-to-position);
-}
-
-.bg-clip-text{
-  -webkit-background-clip: text;
-          background-clip: text;
 }
 
 .object-contain{
@@ -1896,14 +1818,6 @@ video {
 
 .pt-8{
   padding-top: 2rem;
-}
-
-.pb-3{
-  padding-bottom: 0.75rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
 }
 
 .text-left{
@@ -2088,6 +2002,11 @@ video {
   color: rgb(107 33 168 / var(--tw-text-opacity, 1));
 }
 
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
@@ -2099,10 +2018,6 @@ video {
 
 .text-white\/90{
   color: rgb(255 255 255 / 0.9);
-}
-
-.text-transparent{
-  color: transparent;
 }
 
 .underline{
@@ -2147,11 +2062,6 @@ video {
 .blur-3xl{
   --tw-blur: blur(64px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.backdrop-blur-sm{
-  --tw-backdrop-blur: blur(4px);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition{
@@ -2219,10 +2129,6 @@ video {
   background-color: rgb(250 245 255 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-white\/10:hover{
-  background-color: rgb(255 255 255 / 0.1);
-}
-
 .hover\:text-\[\#0A66C2\]:hover{
   --tw-text-opacity: 1;
   color: rgb(10 102 194 / var(--tw-text-opacity, 1));
@@ -2246,11 +2152,6 @@ video {
 .hover\:text-purple-800:hover{
   --tw-text-opacity: 1;
   color: rgb(107 33 168 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-white:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover{
@@ -2278,10 +2179,6 @@ video {
 .focus\:border-purple-300:focus{
   --tw-border-opacity: 1;
   border-color: rgb(216 180 254 / var(--tw-border-opacity, 1));
-}
-
-.focus\:border-transparent:focus{
-  border-color: transparent;
 }
 
 .focus\:outline-none:focus{
@@ -2326,30 +2223,6 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:mb-0{
-    margin-bottom: 0px;
-  }
-
-  .md\:ml-auto{
-    margin-left: auto;
-  }
-
-  .md\:mr-4{
-    margin-right: 1rem;
-  }
-
-  .md\:mr-6{
-    margin-right: 1.5rem;
-  }
-
-  .md\:flex{
-    display: flex;
-  }
-
-  .md\:hidden{
-    display: none;
-  }
-
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2366,22 +2239,6 @@ video {
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
-  .md\:flex-row{
-    flex-direction: row;
-  }
-
-  .md\:items-start{
-    align-items: flex-start;
-  }
-
-  .md\:items-center{
-    align-items: center;
-  }
-
-  .md\:justify-start{
-    justify-content: flex-start;
-  }
-
   .md\:p-10{
     padding: 2.5rem;
   }
@@ -2396,10 +2253,6 @@ video {
 
   .md\:p-8{
     padding: 2rem;
-  }
-
-  .md\:p-6{
-    padding: 1.5rem;
   }
 
   .md\:px-12{
@@ -2456,11 +2309,6 @@ video {
   .md\:text-\[90px\]{
     font-size: 90px;
   }
-
-  .md\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
 }
 
 @media (min-width: 1024px){
@@ -2482,10 +2330,6 @@ video {
 
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:p-8{
-    padding: 2rem;
   }
 
   .lg\:text-\[16px\]{
